# ffc

./: .gitignore  Cargo.toml  rustfmt.toml
examples/: image.rs  image_rules.rs  image_stepped.rs
src/: lib.rs  prelude.rs  tests.rs
src/ffc/: collapse.rs  collapse_rules.rs  gen_source.rs  grid.rs  mod.rs  pos.rs  tests.rs
