[package]
name = "ffc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ndarray = { version = "0.15.4", features = ["serde", "rayon"] }
rand = "0.8.5"
rayon = "1.5.1"
serde = { version = "1.0.136", features = ["derive"] }

[dev-dependencies]