[package]
name = "ffc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ndarray = { version = "0.15.4", features = ["serde", "rayon"] }
rand = "0.8.5"
# rayon = "1.5.2"
# serde = { version = "1.0.136", features = ["derive"] }

[dev-dependencies]
rgb = "0.8.32"
image = "0.24.1"
clap = { version = "3.1.10", features = ["derive"] }
anyhow = "1.0.56"
indicatif = "0.16.2"
pprof = { version = "0.3", features = ["flamegraph"] }
criterion = "0.3"