[package]
name = "ffc"
version = "0.1.1"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[toolchain]
channel = "nightly"

[profile.optimized]
inherits = "dev"
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
# panic = "abort" # See if any libraries rely on stack unwinding
# TODO: Look at enabling the flag that allows using newer CPU features - though breaking some backward compatibility

[features]
js = ["getrandom", "getrandom/js", "rand/getrandom"]


[dependencies]
priority-queue = "1.3.2"
getrandom = { version = "0.2.12", optional = true }
# ndarray = { version = "0.15.4", features = ["serde", "rayon"] }
rand = "0.8.5"
# rayon = "1.5.2"
# serde = { version = "1.0.136", features = ["derive"] }

[dev-dependencies]
rgb = "0.8.32"
image = "0.24.1"
clap = { version = "3.1.10", features = ["derive"] }
anyhow = "1.0.56"
indicatif = "0.16.2"
pprof = { version = "0.3", features = ["flamegraph"] }
criterion = "0.3"
